@@ -30,6 +30,11 @@
 		<plugin>messages</plugin>
 		<priority>after</priority>
 	</requires>
+	<requires>
+		<type>priority</type>
+		<plugin>tidypics</plugin>
+		<priority>after</priority>
+	</requires>
 	
 	<suggests>
 		<type>plugin</type>
